--- a/index.html
+++ b/index.html
@@ -8,32 +8,52 @@
   
   <title>Frontend Mentor | Interactive pricing component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+  <header>
+    <h1>Simple, traffic-based pricing</h1>
+    <p>Sign-up for our 30-day trial. No credit card required.</p>
+  </header>
 
-  Pageviews
-  $ /month
+  <main>
 
-  Monthly Billing
-  Yearly Billing 25% discount
+    <div class="package">
+      <p>100k Pageviews</p>
+      <h2>$<span id="demo"></span><small>/month</small></h2>
+    </div>
 
-  Unlimited websites
-  100% data ownership
-  Email reports
+    <div class="slidecontainer">
+      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    </div>
 
-  Start my trial
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="billings">
+
+      <p>Monthly Billing</p>
+
+      <div class="indicator" id="indicator">
+        <div></div>
+      </div>
+
+      <p>Yearly Billing <span class="discount">25% discount</span></p>
+
+    </div>
+
+    <div>
+
+      <div>
+        <p>Unlimited websites</p>
+        <p>100% data ownership</p>
+        <p>Email reports</p>
+      </div>
+      <button>Start my trial</button>
+
+    </div>
+
+  </main>
+
+
+  <script src="script.js"></script>
 </body>
 </html>
