finished desktop styling

--- a/index.html
+++ b/index.html
@@ -18,38 +18,40 @@
   </header>
 
   <main>
-
-    <div class="package">
-      <p>100k Pageviews</p>
-      <h2>$<span id="demo"></span><small>/month</small></h2>
-    </div>
-
-    <div class="slidecontainer">
-      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-    </div>
-
-    <div class="billings">
-
-      <p>Monthly Billing</p>
-
-      <div class="indicator" id="indicator">
-        <div></div>
+    <section class="pricing">
+      <div class="package">
+        <p>100k Pageviews</p>
+        <h2>$<span id="demo"></span><small>/month</small></h2>
       </div>
 
-      <p>Yearly Billing <span class="discount">25% discount</span></p>
-
-    </div>
-
-    <div>
-
-      <div>
-        <p>Unlimited websites</p>
-        <p>100% data ownership</p>
-        <p>Email reports</p>
+      <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
       </div>
+
+      <div class="billings">
+
+        <p>Monthly Billing</p>
+
+        <div class="indicator" id="indicator">
+          <div></div>
+        </div>
+
+        <p>Yearly Billing <span class="discount">25% discount</span></p>
+
+      </div>
+    </section>
+
+
+    <section class="info">
+
+      <ul>
+        <li>Unlimited websites</li>
+        <li>100% data ownership</li>
+        <li>Email reports</li>
+      </ul>
       <button>Start my trial</button>
 
-    </div>
+    </section>
 
   </main>
 
